set main sections to flex and tested spacing at desktop size. Issues with descendant selectors.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,10 @@ h1 {
     font-size: 3rem;
 }
 
+h3 {
+    margin:5px;
+}
+
 header {
     display: flex;
     flex-direction: row;
@@ -61,6 +65,8 @@ nav ul li:hover {
 
 
 /* Classes */
+
+
 .hero {
     display:flex;
     flex-direction:row;
@@ -80,6 +86,59 @@ nav ul li:hover {
 .hero p:nth-child(2) {
     align-self: flex-end;
     margin:0 45px 0 0;
+}
+
+.project {
+    display:flex;
+    justify-content:flex-start;
+    align-items:flex-end;
+    width:49%;
+    background-color:var(--dark_main);
+    height:200px;
+    margin:10px 0;
+}
+
+.project_title {
+    margin-bottom:25px;
+    padding:5px;
+    background-color:var(--light_main);
+}
+
+.project_title p {
+    margin:5px;
+}
+
+.section_content {
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+    flex-wrap: wrap;
+    width:70%;
+    background-color:var(--light_main);
+    color:var(--dark_main);
+}
+
+/* article.projects:first-child {
+    width:100%;
+} */
+
+.section_title {
+    width:25%;
+    border-right:5px solid var(--dark_main);
+    background-color:var(--light_main);
+    color:var(--dark_main);
+}
+
+.topic {
+    margin:20px 75px;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+}
+
+.full_width {
+    width:100%;
+    height:400px;
 }
 /* IDs */
 
